--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
 
+    // WorkManager
+    implementation 'androidx.work:work-runtime:2.3.0'
+
     // LiveData dependency
     implementation 'android.arch.lifecycle:extensions:1.1.1'
 
